# dist_fs_docs

./: Cargo.toml  build.rs  notas.txt
migrations/: 01_setup_types.sql  02_setup_tables.sql  03_setup functions.sql  03_setup_defaults.sql  04_setup_defaults.sql  04_test_queries.sql  05_example_queries.sql  06_test.sql
proto/: client_metadata.proto  client_storage.proto  dist_fs.proto  metadata.proto  metadata_instructions.proto  metadata_metadata.proto  metadata_private.proto  metadata_public.proto  metadata_replication.proto  storage.proto  storage_instructions.proto  storage_metadata.proto  storage_private.proto  storage_replication.proto  storage_storage.proto
sql/: document_queries.sql  sub_topic_queries.sql  topic_queries.sql  user_queries.sql
src/client/: auth.rs  calls.rs  checksum.rs  main.rs  password_hash.rs  validation.rs
src/common/: auth.rs  lib.rs  middleware.rs  types.rs  valid.rs
src/common/types/: jwt_types.rs  mod.rs  sql_types.rs
src/doc_svc/: common.rs  lib.rs  metadata.rs  storage.rs  validation.rs
src/doc_svc/common/: authentication.rs  proto.rs  types.rs
src/doc_svc/common/types/: sql_types.rs
src/doc_svc/metadata/: middleware.rs  private.rs  public.rs
src/doc_svc/storage/: instructions.rs  private.rs
src/metadata_server/: database.rs  main.rs  metadata.rs
src/metadata_server/metadata/: private.rs  public.rs
src/storage_server/: main.rs  middleware.rs  storage.rs
src/storage_server/storage/: instructions.rs  metadata_instructions.rs  private.rs  storage_service.rs
