[package]
name = "dist_fs_docs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "metadata_server"
path = "src/metadata_server/main.rs"

[[bin]]
name = "storage_server"
path = "src/storage_server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
chrono = {version = "0.4.44", features = ["serde"]}
jsonwebtoken = {version = "10.3.0", features = ["rust_crypto"]}
prost = "0.14.3"
prost-types = "0.14.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
tonic = "0.14.5"
tonic-prost = "0.14.5"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-webpki", "postgres", "derive" ] }
uuid = { version = "1.23.1", features = ["v4","serde"] }
validator = {version = "0.20.0",  features = ["derive"]}
dotenvy = "0.15.7"
argon2 = "0.5.3"
tokio-util = {version = "0.7.18", features = ["io"]}
futures-util = "0.3.32"

[build-dependencies]
tonic-prost-build = "0.14.5"
