[package]
name = "dist_fs_docs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "metadata_server"
path = "src/metadata_server/main.rs"

[[bin]]
name = "storage_server"
path = "src/storage_server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
argon2 = "0.5.3"
chrono = {version = "0.4.44", features = ["serde"]}
dotenvy = "0.15.7"
futures-util = "0.3.32"
http = "1.4.0"
jsonwebtoken = {version = "10.3.0", features = ["rust_crypto"]}
prost = "0.14.3"
#Todavía por usar
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive" ] }
sha2 = "0.11.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-webpki", "postgres", "derive", "uuid", "chrono"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
tokio-util = {version = "0.7.18", features = ["io"]}
tower = "0.5.3"
uuid = { version = "1.23.1", features = ["v4","serde"] }
#Todavía por usar
validator = {version = "0.20.0",  features = ["derive"]}
[build-dependencies]
tonic-prost-build = "0.14.5"
